added cover image uploading

--- a/dunder_mifflin_book_club/app/views/books/index.html.erb
+++ b/dunder_mifflin_book_club/app/views/books/index.html.erb
@@ -5,6 +5,8 @@
 <table>
   <thead>
     <tr>
+      <th>Up</th>
+      <th>Down</th>
       <th>Title</th>
       <th>Auhtor</th>
       <th>Publish date</th>
