--- a/dunder_mifflin_book_club/app/views/books/_form.html.erb
+++ b/dunder_mifflin_book_club/app/views/books/_form.html.erb
@@ -27,6 +27,11 @@
   </div>
 
   <div class="field">
+    <%= form.label :cover_image %>
+    <%= form.file_field :cover_image %>
+  </div>
+  
+  <div class="field">
     <%= form.label :description %>
     <%= form.text_area :description %>
   </div>
