added site header and logo

--- a/dunder_mifflin_book_club/app/views/books/index.html.erb
+++ b/dunder_mifflin_book_club/app/views/books/index.html.erb
@@ -1,7 +1,7 @@
 <p id="notice"><%= notice %></p>
 
 <div class="container">
-  <h1>The 'Finer Things' Book Club</h1>
+  <h1>Reading List</h1>
   <hr>
   Add New Book <%= link_to material_icon.create_new_folder, new_book_path %> <br>
 
